--- a/twitter/Base.lproj/Main.storyboard
+++ b/twitter/Base.lproj/Main.storyboard
@@ -120,66 +120,75 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="r_count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wkl-Du-68H">
                                                     <rect key="frame" x="120" y="131" width="39" height="14"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="14" id="lca-A2-xSf"/>
+                                                        <constraint firstAttribute="height" constant="14" id="gKk-rL-vYy"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="favor-icon" translatesAutoresizingMaskIntoConstraints="NO" id="b77-JY-kk3">
-                                                    <rect key="frame" x="179" y="121" width="30" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="1Pn-Sn-KaC"/>
-                                                        <constraint firstAttribute="width" constant="30" id="k4U-9A-OhD"/>
-                                                    </constraints>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="f_count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yuM-AZ-PSG">
-                                                    <rect key="frame" x="214" y="131" width="39" height="14"/>
+                                                    <rect key="frame" x="219" y="131" width="39" height="14"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="14" id="BhP-SJ-R5w"/>
+                                                        <constraint firstAttribute="height" constant="14" id="UvT-XO-1IY"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="retweet-icon" translatesAutoresizingMaskIntoConstraints="NO" id="vvl-sH-hdh">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aSl-bf-7xy">
                                                     <rect key="frame" x="85" y="123" width="30" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="gRO-xC-0bz"/>
-                                                        <constraint firstAttribute="width" constant="30" id="yQ5-fq-CBQ"/>
+                                                        <constraint firstAttribute="width" constant="30" id="DAD-q3-kld"/>
+                                                        <constraint firstAttribute="height" constant="30" id="cVL-4p-enI"/>
                                                     </constraints>
-                                                </imageView>
+                                                    <state key="normal" image="retweet-icon"/>
+                                                    <state key="selected" image="retweet-icon-green"/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7p0-72-x97">
+                                                    <rect key="frame" x="184" y="121" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="GCP-NQ-hZR"/>
+                                                        <constraint firstAttribute="width" constant="30" id="zH5-Vu-VOJ"/>
+                                                    </constraints>
+                                                    <state key="normal" image="favor-icon"/>
+                                                    <state key="selected" image="favor-icon-red"/>
+                                                    <connections>
+                                                        <action selector="didTapFavorite:" destination="yQh-Ch-DDF" eventType="touchUpInside" id="oPi-IE-Qft"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="yuM-AZ-PSG" firstAttribute="leading" secondItem="b77-JY-kk3" secondAttribute="trailing" constant="5" id="0u2-mV-Sg0"/>
+                                                <constraint firstItem="7p0-72-x97" firstAttribute="leading" secondItem="Wkl-Du-68H" secondAttribute="trailing" constant="25" id="3O1-JS-F2f"/>
+                                                <constraint firstItem="aSl-bf-7xy" firstAttribute="leading" secondItem="83q-gq-MP7" secondAttribute="leading" id="4UG-87-qQ3"/>
                                                 <constraint firstAttribute="trailing" secondItem="83q-gq-MP7" secondAttribute="trailing" constant="10" id="5uD-Qx-qO5"/>
-                                                <constraint firstItem="b77-JY-kk3" firstAttribute="centerY" secondItem="vvl-sH-hdh" secondAttribute="centerY" constant="-2" id="8ss-F3-1L2"/>
+                                                <constraint firstItem="7p0-72-x97" firstAttribute="centerY" secondItem="aSl-bf-7xy" secondAttribute="centerY" constant="-2" id="A9F-ZA-wjd"/>
+                                                <constraint firstItem="yuM-AZ-PSG" firstAttribute="leading" secondItem="7p0-72-x97" secondAttribute="trailing" constant="5" id="Bx5-nz-v7e"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="yuM-AZ-PSG" secondAttribute="trailing" constant="10" id="Gte-jG-UA1"/>
+                                                <constraint firstItem="Wkl-Du-68H" firstAttribute="leading" secondItem="aSl-bf-7xy" secondAttribute="trailing" constant="5" id="HcF-gD-JhM"/>
                                                 <constraint firstItem="eSn-9P-k7X" firstAttribute="leading" secondItem="s9M-tP-JZF" secondAttribute="trailing" constant="8" id="MRw-SS-fVF"/>
-                                                <constraint firstItem="vvl-sH-hdh" firstAttribute="leading" secondItem="83q-gq-MP7" secondAttribute="leading" id="Pyx-se-Bgd"/>
+                                                <constraint firstItem="7p0-72-x97" firstAttribute="top" relation="greaterThanOrEqual" secondItem="83q-gq-MP7" secondAttribute="bottom" constant="8" id="RaM-DS-GWY"/>
                                                 <constraint firstItem="vWp-Ps-329" firstAttribute="leading" secondItem="eSn-9P-k7X" secondAttribute="trailing" constant="8" id="SK8-Qq-U7o"/>
                                                 <constraint firstItem="83q-gq-MP7" firstAttribute="leading" secondItem="s9M-tP-JZF" secondAttribute="leading" id="UY5-ke-d0h"/>
                                                 <constraint firstItem="7D3-sr-tPx" firstAttribute="top" secondItem="v3c-wt-Ufa" secondAttribute="top" constant="10" id="V4B-ka-f44"/>
-                                                <constraint firstItem="Wkl-Du-68H" firstAttribute="centerY" secondItem="vvl-sH-hdh" secondAttribute="centerY" id="V5U-79-mcK"/>
+                                                <constraint firstItem="yuM-AZ-PSG" firstAttribute="centerY" secondItem="aSl-bf-7xy" secondAttribute="centerY" id="Ybt-JM-7qF"/>
                                                 <constraint firstItem="83q-gq-MP7" firstAttribute="top" secondItem="s9M-tP-JZF" secondAttribute="bottom" constant="10" id="ZUJ-LY-T2d"/>
-                                                <constraint firstItem="b77-JY-kk3" firstAttribute="top" relation="greaterThanOrEqual" secondItem="83q-gq-MP7" secondAttribute="bottom" constant="8" id="eDQ-qs-Mdc"/>
-                                                <constraint firstAttribute="bottom" secondItem="vvl-sH-hdh" secondAttribute="bottom" constant="2" id="ejG-re-x82"/>
-                                                <constraint firstItem="Wkl-Du-68H" firstAttribute="leading" secondItem="vvl-sH-hdh" secondAttribute="trailing" constant="5" id="gCk-pn-s4D"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vWp-Ps-329" secondAttribute="trailing" constant="10" id="h1S-3H-Xi0"/>
                                                 <constraint firstItem="7D3-sr-tPx" firstAttribute="leading" secondItem="v3c-wt-Ufa" secondAttribute="leading" constant="10" id="h9C-sE-PL0"/>
-                                                <constraint firstItem="b77-JY-kk3" firstAttribute="leading" secondItem="Wkl-Du-68H" secondAttribute="trailing" constant="20" id="jj2-iq-bs3"/>
+                                                <constraint firstItem="Wkl-Du-68H" firstAttribute="centerY" secondItem="aSl-bf-7xy" secondAttribute="centerY" id="i6g-XB-9dC"/>
                                                 <constraint firstItem="s9M-tP-JZF" firstAttribute="top" secondItem="v3c-wt-Ufa" secondAttribute="top" constant="12" id="l9p-L1-AbC"/>
-                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="yuM-AZ-PSG" secondAttribute="trailing" constant="10" id="n7T-v3-qqI"/>
                                                 <constraint firstItem="vWp-Ps-329" firstAttribute="bottom" secondItem="eSn-9P-k7X" secondAttribute="bottom" id="ofT-1U-f8B"/>
                                                 <constraint firstItem="eSn-9P-k7X" firstAttribute="bottom" secondItem="s9M-tP-JZF" secondAttribute="bottom" constant="-1" id="rGK-bC-phy"/>
-                                                <constraint firstItem="yuM-AZ-PSG" firstAttribute="centerY" secondItem="vvl-sH-hdh" secondAttribute="centerY" id="reI-Rk-mcu"/>
+                                                <constraint firstAttribute="bottom" secondItem="aSl-bf-7xy" secondAttribute="bottom" constant="2" id="u1C-Lz-SOU"/>
                                                 <constraint firstItem="s9M-tP-JZF" firstAttribute="leading" secondItem="7D3-sr-tPx" secondAttribute="trailing" constant="10" id="ufQ-Kk-xh7"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="contentTextLabel" destination="83q-gq-MP7" id="eVj-uX-tfD"/>
                                             <outlet property="createdAtLabel" destination="vWp-Ps-329" id="W4Y-q3-Pgv"/>
+                                            <outlet property="favoriteButton" destination="7p0-72-x97" id="S0c-yr-B9a"/>
                                             <outlet property="favoriteCountLabel" destination="yuM-AZ-PSG" id="Ebt-Eq-W05"/>
                                             <outlet property="profileImageView" destination="7D3-sr-tPx" id="hP6-4Q-OwF"/>
+                                            <outlet property="retweetButton" destination="aSl-bf-7xy" id="yl2-wl-27U"/>
                                             <outlet property="retweetCountLabel" destination="Wkl-Du-68H" id="2Ph-Yv-A7p"/>
                                             <outlet property="userNameLabel" destination="s9M-tP-JZF" id="UuT-ki-2d3"/>
                                             <outlet property="userScreenNameLabel" destination="eSn-9P-k7X" id="P76-F4-zqy"/>
@@ -294,6 +303,8 @@
         <image name="close-icon" width="26" height="24"/>
         <image name="edit-icon" width="30" height="27"/>
         <image name="favor-icon" width="30" height="30"/>
+        <image name="favor-icon-red" width="30" height="30"/>
         <image name="retweet-icon" width="30" height="30"/>
+        <image name="retweet-icon-green" width="30" height="30"/>
     </resources>
 </document>
